<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/rsz_baloobaghera_portrait"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/normalSpacing"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/largeSpacing"
        android:layout_marginRight="@dimen/largeSpacing"
        android:layout_marginTop="@dimen/normalSpacing"
        android:layout_marginBottom="@dimen/normalSpacing"
        card_view:cardBackgroundColor="#E68BC34A"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo"
                android:id="@+id/questionTwo_text"
                android:gravity="center"
                android:layout_marginBottom="@dimen/smallSpacing"
                android:layout_marginTop="@dimen/smallSpacing"
                android:textAppearance="@style/styleOne"
                android:textColor="#F4FF81"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="play song"
                android:layout_gravity="center"
                android:background="#F4FF81"
                android:textColor="#8BC34A"
                android:textAppearance="@style/styleOne"
                android:onClick="playMusic"
                android:id="@+id/play_music"
                android:layout_marginBottom="@dimen/smallSpacing"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>
            />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/questionTwohint"
                android:textAppearance="@style/styleOne"
                android:layout_gravity="center_horizontal"
                android:id="@+id/qTwoVarOne"
                android:textAllCaps="true"
                android:singleLine="true"
                android:capitalize="characters"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="@dimen/normalSpacing"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="@dimen/largeSpacing"
    android:layout_marginRight="@dimen/largeSpacing"
    android:layout_marginTop="@dimen/normalSpacing"
    android:layout_marginBottom="@dimen/normalSpacing"
card_view:cardBackgroundColor="#E68BC34A"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/questionOne"
    android:id="@+id/questionOne_text"
    android:gravity="center"
    android:layout_marginBottom="@dimen/smallSpacing"
    android:layout_marginTop="@dimen/smallSpacing"
    android:textAppearance="@style/styleOne"
    android:textColor="#F4FF81"
    />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/smallSpacing"
        android:layout_marginBottom="@dimen/smallSpacing"
        android:id="@+id/questionOneRadio"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qOneAnswerOne"
            android:id="@+id/qOneVarOne"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qOneAnswerTwo"
            android:id="@+id/qOneVarTwo"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qOneAnswerThree"
            android:id="@+id/qOneVarThree"/>

    </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/normalSpacing"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/largeSpacing"
        android:layout_marginRight="@dimen/largeSpacing"
        android:layout_marginTop="@dimen/normalSpacing"
        android:layout_marginBottom="@dimen/normalSpacing"
        card_view:cardBackgroundColor="#E68BC34A"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionThree"
                android:id="@+id/questionThree_text"
                android:gravity="center"
                android:layout_marginBottom="@dimen/smallSpacing"
                android:layout_marginTop="@dimen/smallSpacing"
                android:textAppearance="@style/styleOne"
                android:textColor="#F4FF81"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qThreeAnswerTwo"
                    android:id="@+id/qThreeVarOne"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qThreeAnswerThree"
                    android:id="@+id/qThreeVarTwo"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qThreeAnswerFour"
                android:id="@+id/qThreeVarThree"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qOneAnswerThree"
                android:id="@+id/qThreeVarFour"
                />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/normalSpacing"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/largeSpacing"
        android:layout_marginRight="@dimen/largeSpacing"
        android:layout_marginTop="@dimen/normalSpacing"
        android:layout_marginBottom="@dimen/normalSpacing"
        card_view:cardBackgroundColor="#E68BC34A"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionFour"
                android:id="@+id/questionFour_text"
                android:gravity="center"
                android:layout_marginBottom="@dimen/smallSpacing"
                android:layout_marginTop="@dimen/smallSpacing"
                android:textAppearance="@style/styleOne"
                android:textColor="#F4FF81"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/smallSpacing"
                android:layout_marginBottom="@dimen/smallSpacing"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFourAnswerOne"
                    android:id="@+id/qFourVarOne"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFourAnswerTwo"
                    android:id="@+id/qFourVarTwo"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFourAnswerThree"
                    android:id="@+id/qFourVarFour"/>

            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/normalSpacing"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/largeSpacing"
        android:layout_marginRight="@dimen/largeSpacing"
        android:layout_marginTop="@dimen/normalSpacing"
        android:layout_marginBottom="@dimen/normalSpacing"
        card_view:cardBackgroundColor="#E68BC34A"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionFive"
                android:id="@+id/questionFive_text"
                android:gravity="center"
                android:layout_marginBottom="@dimen/smallSpacing"
                android:layout_marginTop="@dimen/smallSpacing"
                android:textAppearance="@style/styleOne"
                android:textColor="#F4FF81"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/smallSpacing"
                android:layout_marginBottom="@dimen/smallSpacing"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFiveAnswerOne"
                    android:id="@+id/qFiveVarOne"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFiveAnswerTwo"
                    android:id="@+id/qFiveVarTwo"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qFiveAnswerThree"
                    android:id="@+id/qFiveVarThree"/>

            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishButton"
        android:textAllCaps="false"
        android:background="#8BC34A"
        android:textColor="#F4FF81"
        android:textAppearance="@style/styleFour"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normalSpacing"
        android:layout_marginBottom="@dimen/normalSpacing"
        android:paddingLeft="@dimen/smallSpacing"
        android:paddingRight="@dimen/smallSpacing"
        android:onClick="finishQuizz"/>

</LinearLayout>
    </RelativeLayout>
    </ScrollView>

