<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzthejunglebook.finalPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/rsz_finalpic" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardBackgroundColor="#E68BC34A"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/normalSpacing">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/largeSpacing">

            <TextView
                android:id="@+id/congrats_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/rsz_monkey"
                android:drawablePadding="@dimen/smallSpacing"
                android:gravity="center"
                android:text="@string/Congratulations"
                android:textAppearance="@style/styleTwo" />

            <TextView
                android:id="@+id/points_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/smallSpacing"
                android:text="@string/Points"
                android:textAppearance="@style/styleTwo" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/smallSpacing"
        android:background="#8BC34A"
        android:onClick="goback"
        android:text="@string/back"
        android:textAppearance="@style/styleOne"
        android:textColor="#F4FF81" />
</RelativeLayout>
